[package]
name = "monoruby"
version = "0.1.0"
authors = ["monochrome <sisshiki@mac.com>"]
description = "a toy Ruby interpreter with JIT compilation."
repository = "https://github.com/sisshiki1969/monoruby"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
emit-asm = []
emit-bc = []
log-jit = []

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
chumsky = "0.8.0"
ariadne = "0.1.3"
rustyline = "9.1.2"
paste = "1.0.7"
monoasm_macro = { git = "https://github.com/sisshiki1969/monoasm.git" }
monoasm = { git = "https://github.com/sisshiki1969/monoasm.git" }
ruruby-parse = { git = "https://github.com/sisshiki1969/ruruby-parse.git" }
num = "0.4.0"
fxhash = "0.2.1"
tempfile ="3.3.0"
dtoa = "1.0"