[package]
name = "monoruby"
version = "0.1.0"
authors = ["monochrome <sisshiki@mac.com>"]
description = "a toy Ruby interpreter with JIT compilation."
repository = "https://github.com/sisshiki1969/monoruby"
edition = "2021"
license = "MIT"
default-run = "monoruby"
build = "build.rs"

[[bin]]
name = "monoruby"

[[bin]]
name = "irm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
emit-asm = []
emit-bc = []
emit-tir = []
log-jit = []
gc-debug = []

[profile.dev]
opt-level = 1

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
chumsky = "0.8.0"
ariadne = "0.1.3"
rustyline = "10.0.0"
paste = "1.0.7"
monoasm_macro = { git = "https://github.com/sisshiki1969/monoasm.git" }
monoasm = { git = "https://github.com/sisshiki1969/monoasm.git" }
ruruby-parse = { git = "https://github.com/sisshiki1969/ruruby-parse.git" }
num = "0.4.0"
fxhash = "0.2.1"
tempfile ="3.3.0"
dtoa = "1.0"
chrono = "0.4.19"
smallvec = { version = "1.9.0", features = ["const_generics"] }
escape_string = "0.1.2"
hex = "0.4.3"
rand = "0.8.5"