# Standalone validation crate for the monoruby aarch64 VM backend.
#
# It depends ONLY on monoasm (so it cross-compiles to aarch64 cleanly, unlike
# the monoruby crate, whose VM-tier asm is not yet ported) and exercises the
# core codegen patterns the real VM port will use, under qemu. It is detached
# from the monoruby workspace (`[workspace]` below) so it never participates in
# the main build / CI.
#
# Run:  (from this dir)
#   cargo test --target aarch64-unknown-linux-gnu
# which links with the GNU cross toolchain and runs under qemu-aarch64 via the
# repo-root .cargo/config.toml runner.
[package]
name = "aarch64-proto"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
monoasm = { git = "https://github.com/sisshiki1969/monoasm.git", branch = "aarch" }
