[package]
name = "monoruby"
version = "0.3.0"
authors = ["monochrome <sisshiki@mac.com>"]
description = "another CRuby implementation with JIT compiler."
repository = "https://github.com/sisshiki1969/monoruby"
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "monoruby"
build = "build.rs"

[[bin]]
name = "monoruby"

[[bin]]
name = "irm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dump-bc = []
dump-traceir = []
emit-asm = ["dump-bc", "dump-traceir", "jit-log"]
emit-bc = ["dump-bc", "dump-traceir"]
jit-log = []
jit-debug = ["dump-traceir"]
deopt = ["jit-log", "dump-bc", "dump-traceir"]
gc-log = []
gc-debug = []
gc-stress = []
# After every minor GC, independently re-mark the whole live graph from
# the roots. If the minor collection freed anything still reachable
# (a missed write barrier / remembered-set entry), the traversal hits a
# freed slot and the is_live assertion in RValue::mark fires. Debug-only;
# very slow. See doc/generational_gc_plan.md.
gc-verify = []
# Force PHYS_XMM_POOL down to 2 so almost every Float-resident slot
# becomes a spilled VirtFPReg. Used in CI to stress-test the spill
# code paths (LoadSpill / StoreSpill, spill-aware AsmInst lowerings,
# 16-byte spill-region alignment).
stress-spill-pool = []
profile = ["dump-bc", "dump-traceir"]
perf = []
# §5 Layer-② extraction: stage-1 *placement shadow*. Records, in emission order,
# every physical FP placement that ③ commits (one entry per `PhysMap::resolve`),
# producing a per-`jit_compile` fingerprint of the FPReg→FPRegLoc lowering. The
# P2/P3 separation (① virtual-reg assignment vs ② physical allocation) is gated
# on this fingerprint staying byte-identical between the baseline greedy
# allocator and the separated ②. Default-off; zero cost in shipping builds.
shadow-placement = []
# §5 Layer-② extraction, step P2: relocate the physical FP-placement *policy*
# (pool-vs-spill) out of ③ (`PhysMap::resolve`) into an explicit ②
# (`codegen::phys_alloc`) table-backed function, leaving ③ policy-free (look up
# the virtual fpr's physical slot, apply the frame base). Byte-identical to the
# formula it replaces (verified via `shadow-placement` digests); the seam where
# P4's loop-aware allocator swaps in. Default-off until the M1 A/B gate clears.
phys-table = []
# §5 §27.3 Stage-2: the loop-aware FP allocation policy. ① (the back-edge
# fixpoint) records the loop-carried float set `L`; the phase-1 spill-victim
# policy then keeps `L`'s `Sf` caches resident (a fresh value spills instead of
# evicting a loop-carried float), cutting in-loop reloads. NON-byte-identical by
# design (§26): it changes placement / removes back-edge moves, so the
# `shadow-placement` digest becomes a *delta* meter, not an equality check, and
# the gate is M1 perf A/B (§27.3-2c). Default-off until that gate clears.
phys-loop-aware = []
# §9 9d-2: cross-merge GP register retention in the LIR pass (`gp_alloc::allocate`,
# run from `allocate_gp`). The GP register allocator itself (the allocatable pool
# `r8`-`r11` tracked in `gp_alloc`, the `fpr_alloc` analogue) is now standard —
# always compiled; on aarch64 the pool is empty (`GP_ALLOC_POOL = &[]`) so it is
# inert. This feature additionally lets a pool resident stay in its register
# across a control-flow edge (fall-through, forward branch, loop back-edge)
# instead of flushing at the boundary. NON-byte-identical once it retains;
# default-off until the M1 A/B bench gate clears (cf. phys-loop-aware §42).
gp-alloc-lir = []
emit-cfg = ["dump-bc", "dump-traceir"]
dump-require = []

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rustyline = "18.0.0"
paste = "1.0.15"
monoasm_macro = { git = "https://github.com/sisshiki1969/monoasm.git", branch = "aarch" }
monoasm = { git = "https://github.com/sisshiki1969/monoasm.git", branch = "aarch" }
onigmo-regex = { git = "https://github.com/sisshiki1969/onigmo-regex.git" }
ruby-prism = { git = "https://github.com/sisshiki1969/prism.git", branch = "monoruby-vendored" }
monoruby-attr = { path = "../monoruby_attr" }
rubymap = { path = "../rubymap" }
indexmap = "2.14.0"
num = "0.4.3"
console = "0.15.11"
fxhash = "0.2.1"
tempfile = "3.27.0"
dtoa = "1.0.11"
chrono = "0.4.44"
encoding_rs = "0.8"
smallvec = { git = "https://github.com/sisshiki1969/rust-smallvec.git", features = [
  "const_generics",
] }
escape_string = "0.1.2"
hex = "0.4.3"
rand = "0.9.1"
regex = "1.12.3"
libc = "0.2.186"
getrandom = "0.3.3"
rand_mt = { version = "5.0.0", features = ["rand-traits"] }
bitvec = "1.0.1"
ansi_term = "0.12.1"
dirs = "6.0.0"
globset = "0.4.14"
html-escape = "0.2.13"
unicode-general-category = "1.0.0"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.13.2"
signal-hook = "0.4.4"
divrem = "1.0.0"
libffi = "5.1.0"
# Digest builtins (`builtins/digest.rs`) — used on every platform, so these
# must stay in the cross-platform `[dependencies]`, not a target block.
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"

# macOS aarch64 (Apple Silicon): the bundled libffi-sys 4.1.0 fails to
# link `_ffi_prep_cif_machdep` (the arm64 assembly piece doesn't build
# into the static archive), so fall back to Homebrew's system libffi via
# pkg-config. Linux / x86_64 darwin keep the bundled build, matching the
# CI configuration. Install with `brew install libffi pkg-config`.
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
libffi = { version = "5.1.0", features = ["system"] }

[build-dependencies]
dirs = "6.0.0"
